--- a/app/globals.css
+++ b/app/globals.css
@@ -33,6 +33,18 @@
       --ring: 222.2 84% 4.9%;
 
       --radius: 0.5rem;
+
+      --amplify-components-authenticator-router-box-shadow: 0 0 16px var(--amplify-colors-overlay-10);
+      --amplify-components-authenticator-router-border-width: 0;
+      --amplify-components-authenticator-form-padding: var(--amplify-space-medium) var(--amplify-space-xl) var(--amplify-space-xl);
+      --amplify-components-button-primary-background-color: var(--amplify-colors-neutral-100);
+      --amplify-components-fieldcontrol-focus-box-shadow: 0 0 0 2px var(--amplify-colors-black-80);
+      --amplify-components-tabs-item-active-border-color: var(--amplify-colors-neutral-100);
+      --amplify-components-tabs-item-color: var(--amplify-colors-neutral-80);
+      --amplify-components-tabs-item-active-color: var(--amplify-colors-neutral-100);
+      --amplify-components-button-link-color: var(--amplify-colors-blue-80);
+      --amplify-components-button-hover-color: var(--amplify-colors-black-100);
+
     }
 
     .dark {
@@ -65,6 +77,7 @@
       --ring: 212.7 26.8% 83.9%;
     }
   }
+
 
   @layer base {
     * {
